--- a/PlaylistRetriever/PlaylistRetriever.csproj
+++ b/PlaylistRetriever/PlaylistRetriever.csproj
@@ -79,21 +79,21 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Models\DialogResponse.cs" />
-    <Compile Include="Models\FormatColumnsResponse.cs" />
-    <Compile Include="Services\FormatColumnsService.cs" />
-    <Compile Include="ViewModels\ViewModelLocator.cs" />
+    <Compile Include="Models\Responses\DialogResponse.cs" />
+    <Compile Include="Models\Responses\FormatColumnsResponse.cs" />
+    <Compile Include="Services\FormatColumnsDialogService.cs" />
+    <Compile Include="Infrastructure\ViewModelLocator.cs" />
     <Compile Include="Views\BuildKeyDialogWindow.xaml.cs">
       <DependentUpon>BuildKeyDialogWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\ApiKeyResponse.cs" />
+    <Compile Include="Models\Responses\ApiKeyResponse.cs" />
     <Compile Include="Services\BuildKeyDialogService.cs" />
     <Compile Include="ViewModels\BuildKeyDialogViewModel.cs" />
-    <Compile Include="ViewModels\FormatWindowViewModel.cs" />
+    <Compile Include="ViewModels\FormatColumnsDialogViewModel.cs" />
     <Compile Include="Models\PlaylistWriter.cs" />
-    <Compile Include="ViewModels\MainWindowViewModel.cs" />
-    <Compile Include="Views\FormatWindow.xaml.cs">
-      <DependentUpon>FormatWindow.xaml</DependentUpon>
+    <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="Views\FormatDialogWindow.xaml.cs">
+      <DependentUpon>FormatDialogWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="Views\BuildKeyDialogWindow.xaml">
       <SubType>Designer</SubType>
@@ -111,7 +111,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Views\FormatWindow.xaml">
+    <Page Include="Views\FormatDialogWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
