--- a/SpotifyAPI/SpotifyAPI.csproj
+++ b/SpotifyAPI/SpotifyAPI.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL" />
@@ -44,9 +46,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpotifyAccessCredentials.cs" />
+    <Compile Include="SpotifyClient.cs" />
     <Compile Include="SpotifyObjects\SpotifyAlbumSimple.cs" />
     <Compile Include="SpotifyObjects\SpotifyArtistSimple.cs" />
-    <Compile Include="SpotifyClient.cs" />
+    <Compile Include="SpotifyClientOld.cs" />
     <Compile Include="SpotifyObjects\SpotifyFollowers.cs" />
     <Compile Include="SpotifyObjects\SpotifyImage.cs" />
     <Compile Include="SpotifyObjects\SpotifyPaging.cs" />
